- prod properties moved to config cloud server;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.boot.admin.url=http://localhost:8888
+spring.application.name=filesManager
+
 server.port=2002
 
 server.contextPath=/fileManager
