--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,20 +1,2 @@
-server.port=2002
-
-server.contextPath=/fileManager
-
-gatewayHost=54.218.34.199
-gatewayPort=80
-
-mainAppHost=54.218.34.199
-mainAppPort=80
-
-db.type=MYSQL
-db.dialect=org.hibernate.dialect.MySQL5Dialect
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost/tasks?zeroDateTimeBehavior=convertToNull
-db.username=root
-db.password=gateway
-
-aws.s3.accessKeyId=AKIAJLXHBXMZ2T4A3JMA
-aws.s3.secretKey=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
-aws.s3.bucketName=pbs-tasks-management
+spring.boot.admin.url=http://localhost:8888
+spring.application.name=filesManager
