--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ server.port=2002
 
 server.contextPath=/fileManager
 
-gatewayHost=localhost
-gatewayPort=2000
-
-mainAppHost=localhost
-mainAppPort=63769
+#gatewayHost=localhost
+#gatewayPort=2000
+#
+#mainAppHost=localhost
+#mainAppPort=63769
 
 db.type=MYSQL
 db.dialect=org.hibernate.dialect.MySQL5Dialect
